@@ -25,6 +25,7 @@ New user-visible features
 
 Bugs fixed
 ----------
+- Bug 1249 - doxygen comments on device-level SetMobility ()
 - Bug 1736 - default dot11EDCATableMSDULifetime
 - Bug 1929 - TcpL4Protocol::Send must indicate the source address to routing (if known)
 - Bug 2126 - LrWpanNetDevice silently accepts no mobility on the node
